Page header is now a lot more responsive and is fixed in order to keep current page heading info always visible.

--- a/djangoerp/themes/default/static/css/base.css
+++ b/djangoerp/themes/default/static/css/base.css
@@ -17,6 +17,14 @@ a:focus {
     outline: none;
 }
 
+.ui.dropdown .active.button.item {
+    background-color: #c0c1c2;
+}
+
+.ui.collapsable.buttons .ui.pointing.dropdown>.menu:after {
+    background: #e0e1e2;
+}
+
 .ui.compact.button,
 .ui .compact.button,
 .ui.compact > .button,
@@ -69,6 +77,14 @@ a:focus {
 .ui.vertical.internal.pointing.menu .active.item:after,
 .ui.vertical.internal.pointing.menu .active.item:hover:after {
     background-color: #3d3e3f;
+}
+
+.ui.collapsable.buttons .ui.dropdown .menu > .button.item:hover {
+    background-color: #cacbcd;
+}
+
+.ui.collapsable.buttons .ui.dropdown .menu > .item .icon {
+    margin-right: 0;
 }
 
 .ui.details.accordion {
@@ -157,6 +173,15 @@ a:focus {
     padding: 3rem 0;
 }
 
+/* Very small devices (phones, unitl 767px) ***********************************/
+
+@media (max-width: 767px) {
+
+    .ui.collapsable.buttons .ui.dropdown .menu > .icon.button.item {
+        border-radius: 0;
+    }
+}
+
 /* Small devices (tablets, 768px and up) **************************************/
 
 @media (min-width: 768px) {
@@ -168,5 +193,44 @@ a:focus {
 
     .ui.list > .item > .inline.content > .description {
         margin-top: 0;
+    }
+
+    .ui.collapsable.buttons .ui.pointing.dropdown .menu:after {
+        display: none;
+    }
+
+    .ui.collapsable.buttons .ui.dropdown {
+        padding: 0;
+        background: transparent;
+    }
+
+    .ui.collapsable.buttons .ui.dropdown > .icon {
+        display: none;
+    }
+
+    .ui.collapsable.buttons .ui.dropdown .menu {
+        display: inline-block !important;
+        visibility: visible !important;
+        position: relative;
+        min-width: 100%;
+        width: auto !important;
+        margin-top: 0 !important;
+        top: 0 !important;
+        border: none !important;
+        box-shadow: none !important;
+        text-align: right;
+        background: transparent;
+    }
+
+    .ui.collapsable.buttons .ui.dropdown .menu > .icon.button.item {
+        display: inline-block !important;
+        padding: .78571429em !important;
+        margin-right: -5px;
+        box-shadow: 0 0 0 1px transparent inset,0 0 0 0 rgba(34,36,38,.15) inset;
+    }
+
+    .ui.collapsable.buttons .ui.dropdown.item:not(:last-child) .menu > .item:last-child {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
     }
 }
